<resources>
    <string name="app_name">Drag Ndk</string>

    <string name="action_lists">Test lists</string>
    <string name="action_board">Test board </string>
    <string name="action_disable_drag">Disable drag</string>
    <string name="action_enable_drag">Enable drag</string>
    <string name="action_list">List (drag on touch image icon)</string>
    <string name="action_grid_vertical">Grid vertical (drag on long press)</string>
    <string name="action_grid_horizontal">Grid horizontal (drag on long press)</string>
    <string name="grid_layout">Grid layout</string>
    <string name="list_layout">List layout</string>
    <string name="add_column">Add column</string>
    <string name="remove_column">Remove column</string>
    <string name="clear_board">Clear board</string>
</resources>