<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_disable_drag"
        android:title="@string/action_disable_drag"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_drag"
        android:title="@string/action_enable_drag"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_list"
        android:title="@string/action_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grid_vertical"
        android:title="@string/action_grid_vertical"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grid_horizontal"
        android:title="@string/action_grid_horizontal"
        app:showAsAction="never"/>
</menu>
